# MyDB

./: LICENSE  README.md  designRelated.md
SQLclient/: .gitignore  CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.hpp  client  client.cpp  makefile
SQLclient/tools/: build.sh
SQLserver/: .gitignore  CMakeLists.txt  CMakeSettings.json
SQLserver/scripts/: final.txt  test2.txt
SQLserver/src/: CMakeLists.txt  main.cpp
SQLserver/src/Controller/: Application.cpp  Application.hpp
SQLserver/src/Controller/CommandProcessors/: ApplicationProcessor.cpp  ApplicationProcessor.hpp  CommandProcessor.hpp  CommandProcessors.hpp  DatabaseProcessor.cpp  DatabaseProcessor.hpp  SQLProcessor.cpp  SQLProcessor.hpp
SQLserver/src/Controller/Locker/: LockManager.cpp  LockManager.hpp  Transaction.hpp
SQLserver/src/Controller/Managers/: ApplicationManager.cpp  ApplicationManager.hpp  DatabaseInstanceManager.cpp  DatabaseInstanceManager.hpp  DatabaseManager.cpp  DatabaseManager.hpp  Manager.hpp  Managers.hpp  SQLManager.cpp  SQLManager.hpp
SQLserver/src/Controller/ParserHelpers/: Compare.hpp  ParseHelper.cpp  ParseHelper.hpp  Scanner.hpp  Tokenizer.cpp  Tokenizer.hpp
SQLserver/src/DefaultTests/: Faked.cpp  Faked.hpp  ScriptRunner.hpp  TestAutomatic.hpp  TestManually.hpp  TestSequencer.hpp
SQLserver/src/Model/: Alter.hpp  Attribute.cpp  Attribute.hpp  Database.cpp  Database.hpp  Entity.cpp  Entity.hpp  Log.cpp  Log.hpp  Row.cpp  Row.hpp  SQLQuery.cpp  SQLQuery.hpp
SQLserver/src/Model/Statements/: Statement.hpp  Statements.hpp
SQLserver/src/Model/Statements/ApplicationStatements/: ApplicationStatements.hpp  HelpApplicationStatement.hpp  QuitApplicationStatement.hpp  RunScriptStatement.hpp  VersionApplicationStatement.hpp
SQLserver/src/Model/Statements/DatabaseStatements/: CreateDatabaseStatement.hpp  DatabaseStatements.hpp  DropDatabaseStatement.hpp  DumpDatabaseStatement.hpp  LogDatabaseStatement.hpp  ShowDatabasesStatement.hpp  UseDatabaseStatement.hpp
SQLserver/src/Model/Statements/SQLStatements/: DeleteStatement.hpp  IndexStatement.hpp  InsertStatement.hpp  SQLStatements.hpp  SelectStatement.hpp  UpdateStatement.hpp
SQLserver/src/Model/Statements/TableStatements/: AlterTableStatement.hpp  CreateTableStatement.hpp  DescribeTableStatement.hpp  DropTableStatement.hpp  ShowTablesStatement.hpp  TableStatements.hpp
SQLserver/src/Model/Storage/: BPlusTree.cpp  BPlusTree.hpp  CustomLinkedList.hpp  LRUCache.hpp  Storage.cpp  Storage.hpp
SQLserver/src/Model/Storage/Blocks/: Block.cpp  Block.hpp  Blocks.hpp  DataBlock.cpp  DataBlock.hpp  EntityBlock.cpp  EntityBlock.hpp  FreeBlock.cpp  FreeBlock.hpp  MetaHeaderBlock.cpp  MetaHeaderBlock.hpp
SQLserver/src/Model/Storage/LogBlocks/: LogMetaBlock.cpp  LogMetaBlock.hpp  (+2 more)
SQLserver/src/Server/: SQLServer.cpp  SQLServer.hpp
SQLserver/src/Server/Socket/: PracticalSocket.cpp  PracticalSocket.hpp  ThreadPool.hpp
SQLserver/src/Util/: BasicTypes.hpp  Config.hpp  Errors.hpp  FolderReader.hpp  FormatString.hpp  Helpers.hpp  Timer.hpp  keywords.hpp
SQLserver/src/View/: FolderView.hpp  QueryResultView.hpp  TableView.cpp  TableView.hpp  TimerView.hpp  View.hpp
SQLserver/tests/: AutograderTests.cpp  CMakeLists.txt  CustomTests.cpp  SanityCheck.cpp
SQLserver/tools/: RunLinter.py  build.sh
